--- a/package.json
+++ b/package.json
@@ -19,9 +19,23 @@
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
-    "rxjs": "~6.6.0",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.4.1",
+    "cdelateja": "/home/cdelateja/Proyects/Personal/angular-lib/dist/cdelateja",
+    "net": "^1.0.2",
+    "ngx-cookie-service": "^10.0.1",
+    "ngx-translate-multi-http-loader": "^3.0.0",
+    "popper.js": "^1.16.0",
+    "rxjs": "~6.6.7",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.11",
