--- a/angular.json
+++ b/angular.json
@@ -33,10 +33,16 @@
                 "input": "./node_modules/cdelateja/assets/i18n/cdelateja",
                 "output": "/assets/i18n/cdelateja/"
               },
+              {
+                "glob": "**/*",
+                "input": "node_modules/ngx-extended-pdf-viewer/assets/",
+                "output": "/assets/"
+              },
               "src/assets"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/material-design-icons/iconfont/material-icons.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/cdelateja/assets/styles/styles.scss",
               "src/styles.scss"
