--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@ngx-translate/core": "^11.0.1",
-    "@ngx-translate/http-loader": "^4.0.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.0",
     "cdelateja": "/home/cdelateja/Proyects/Personal/angular-lib/dist/cdelateja",
     "jquery": "^3.4.1",
+    "material-design-icons": "^3.0.1",
     "net": "^1.0.2",
+    "ng2-pdf-viewer": "^7.0.1",
     "ngx-cookie-service": "^10.0.1",
+    "ngx-extended-pdf-viewer": "^9.0.0-alpha.11",
     "ngx-translate-multi-http-loader": "^3.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.6.7",
