--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "bootstrap": "^4.5.0",
+    "@popperjs/core": "^2.9.3",
+    "bootstrap": "^5.1.0",
     "cdelateja": "/home/cdelateja/Proyects/Personal/angular-lib/dist/cdelateja",
     "jquery": "^3.4.1",
     "material-design-icons": "^3.0.1",
@@ -35,7 +36,6 @@
     "ngx-cookie-service": "^10.0.1",
     "ngx-extended-pdf-viewer": "^9.0.0-alpha.11",
     "ngx-translate-multi-http-loader": "^3.0.0",
-    "popper.js": "^1.16.0",
     "rxjs": "~6.6.7",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
